# cerberus

./: .gitignore  AUDIT.md  CLAUDE.md  README.md  RELEASING.md  dev.ps1  index.html  package-lock.json  package.json  vite.config.ts
public/nexus/: craft-index.json  item-drops.json  manifest.json  material-usage.json  refining.json  search-index.json
scripts/: build-nexus-snapshot.mjs  publish-seed.mjs  release.mjs
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: asteroids.rs  auctions.rs  auth.rs  combat.rs  ec.rs  em.rs  input.rs  lib.rs  main.rs  nexus.rs  ocr.rs  poi.rs  seed_mobs.json  seed_pois.json  sessions.rs  watcher.rs
src/components/: AvatarTag.tsx  Backdrop.tsx  ItemTag.tsx  LoadoutCreator.tsx  MapDetail.tsx  PoiEditor.tsx  Sidebar.tsx  WindowControls.tsx  icons.tsx
src/components/codex/: CodexBits.tsx  ItemDetail.tsx  MobDetail.tsx
src/data/: howlingMine.json  spaceGates.json
src/hooks/: useAsteroids.ts  useAuth.ts  useBroadcast.ts  useChatTriggers.ts  useEcIntel.ts  useEncounters.ts  useFeedIntel.ts  useLocations.ts  useLogWatch.ts  useNexusSnapshot.ts  usePlayerPosition.ts  usePois.ts  useSightings.ts  useTrackerSession.ts  useTradeOrders.ts  useUpdater.ts
src/lib/: auctions.ts  channels.ts  chime.ts  crosshair.ts  ec.ts  ecMedia.ts  em.ts  emConfig.ts  equipment.ts  features.ts  feed.ts  invokeReady.ts  loadout.test.ts  loadout.ts  locations.ts  nexus.ts  pois.ts  session.ts  sightings.ts  supabase.ts  trackerStats.ts  tradeChat.ts  tradeMatch.ts  tradeParse.ts  triggers.ts
src/lib/codex/: store.ts  types.ts
src/pages/: AlertToast.tsx  ArbBoard.tsx  Asteroids.tsx  BattleRadar.tsx  Calibrator.tsx  CaptureRegion.tsx  ClanFeed.tsx  Codex.tsx  Combat.tsx  CombatHud.tsx  Crosshair.tsx  Dashboard.tsx  DelBoy.tsx  Dock.tsx  EmRegion.tsx  EmTool.tsx  Feed.tsx  Login.tsx  MapView.tsx  Media.tsx  MobCaptureRegion.tsx  MobDb.tsx  Panel.tsx  Profile.tsx  Settings.tsx  Splash.tsx  Tracker.tsx  TrackerHud.tsx  Trade.tsx  TradeCapture.tsx  Waypoints.tsx
supabase/: locations.sql  sightings.sql
